After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681449 - Cleanup the behavior of --replace
Cleanup the behavior of --replace
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-08-08 13:17 UTC by Stef Walter
Modified: 2012-08-11 05:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
daemon: When --replace quit all running daemons (1.02 KB, patch)
2012-08-08 13:17 UTC, Stef Walter
none Details | Review
daemon: Be quiet while replacing another daemon (6.12 KB, patch)
2012-08-08 13:18 UTC, Stef Walter
committed Details | Review
daemon: If control directory in environment use when replacing (1.78 KB, patch)
2012-08-08 13:18 UTC, Stef Walter
committed Details | Review
daemon: When --replace quit all running daemons (1.02 KB, patch)
2012-08-08 13:19 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-08-08 13:17:45 UTC
* Try to use the control directory in the environment if present
   so that --replace can be sure to work with ssh and gpg agents.
 * Quit all daemons in session when --replace
 * Quiet things down when running with --replace, less complaining.
Comment 1 Stef Walter 2012-08-08 13:17:47 UTC
Created attachment 220670 [details] [review]
daemon: When --replace quit all running daemons

 * When using --replace we assume that we're supposed to replace
   all running daemons in the session, rather than just the
   first we discovered.
Comment 2 Stef Walter 2012-08-08 13:18:44 UTC
Created attachment 220671 [details] [review]
daemon: Be quiet while replacing another daemon

* When doing --replace don't complain that the other daemon
   cannot be reached. It may have exited but we still want to
   use the environment it setup.
Comment 3 Stef Walter 2012-08-08 13:18:54 UTC
Created attachment 220672 [details] [review]
daemon: If control directory in environment use when replacing

* When replacing another daemon always prefer the control
   directory discovered through the environment. This way
   ssh and gpg work with a --replace'd gnome-keyring-daemon.
 * Previously we would use the last control directory discovered
   which meant that if gnome-keyring-daemon had crashed, and had
   later been restarted via dbus, then the control directory
   for the last daemon was used, rather than the one in the env.
Comment 4 Stef Walter 2012-08-08 13:19:03 UTC
Created attachment 220673 [details] [review]
daemon: When --replace quit all running daemons

* When using --replace we assume that we're supposed to replace
   all running daemons in the session, rather than just the
   first we discovered.
Comment 5 Stef Walter 2012-08-11 05:22:20 UTC
Attachment 220671 [details] pushed as 5445981 - daemon: Be quiet while replacing another daemon
Attachment 220672 [details] pushed as 1cf271c - daemon: If control directory in environment use when replacing
Attachment 220673 [details] pushed as 6da2939 - daemon: When --replace quit all running daemons