daemon: Be quiet while replacing another daemon

* When doing --replace don't complain that the other daemon
   cannot be reached. It may have exited but we still want to
   use the environment it setup.

https://bugzilla.gnome.org/show_bug.cgi?id=681449